# trace-poc

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pni-implementation-spec-consolidated.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
api/: __init__.py  admin.py  config.py  graph.py  main.py  normalize.py  seeding.py  services.py
api/emitter/: __init__.py  contracts.py  emitter.py
api/explore/: __init__.py  models.py  router.py  service.py
api/ingestion/: __init__.py  models.py  router.py
api/resolve/: __init__.py  adapters.py  pipeline.py  ports.py  service.py
api/signal/: __init__.py  router.py  service.py
config/: settings.yaml
docs/: README.md  scale-probe-results.md
docs/contracts/: README.md  event-envelope.schema.json  ingestion-request.schema.json  resolution-outcome-payload.schema.json  signal-payload.schema.json
docs/demo-run/: README.md  resolution-outcome.jsonl  signal.jsonl
docs/test-data/: README.md  generate_parties.py  (+2 more)
scripts/: generate_contract_schemas.py  pni_seed_build.py  scale_probe.py
spec/: party-network-poc-spec.md
tests/: conftest.py  data.py  test_acceptance.py  test_adapters.py  test_app.py  test_config.py  test_emitter.py  test_explore.py  test_graph.py  test_ingestion.py  test_normalize.py  test_resolve.py  test_seed.py  test_signal.py  test_ui_serving.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  (+2 more)
(+4 files in other folders)
