[project]
name = "trace-poc"
version = "0.1.0"
description = "Party Network Platform POC — tiered party resolution, exposure traversal, and pattern signals on a Neo4j graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "neo4j>=5.26",
    "boto3>=1.43.46",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]
scale = [
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "acceptance: the automated §8 demo-script walkthrough (slow, needs Bedrock)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
